syntax = "proto3";

option go_package = "github.com/yammerjp/lc500/proto/api/v1";

package v1;

service Worker {
  rpc InitVM(InitVMRequest) returns (InitVMResponse) {}
  rpc DisposeVM(DisposeVMRequest) returns (DisposeVMResponse) {}
  rpc Compile(CompileRequest) returns (CompileResponse) {}
  rpc SetContext(SetContextRequest) returns (SetContextResponse) {}
  rpc Run(RunRequest) returns (RunResponse) {}
}

message InitVMRequest {
}

message InitVMResponse {
  string vmid = 1;
}

message DisposeVMRequest {
  string vmid = 1;
}

message DisposeVMResponse {
}

message CompileRequest {
  string vmid = 1;
  string script = 2;
}

message CompileResponse {
}

message SetContextRequest {
  string vmid = 1;
  HttpRequest httpRequest = 2;
  HttpResponse httpResponse = 3;
}

message HttpRequest {
  string method = 1;
  string url = 2;
  string body = 3;
  map<string, HeaderValue> headers = 4;
}

message HttpResponse {
  int32 statusCode = 1;
  map<string, HeaderValue> headers = 2;
  string body = 3;
}

message SetContextResponse {
}

message HeaderValue {
  repeated string values = 1;
}

message RunRequest {
  string vmid = 1;
  bool dispose = 2;
}

message RunResponse {
  HttpResponse httpResponse = 1;
}
